# src/routes/orderRoutes.js
@@ -1,0 +1,9 @@
+const express = require("express");
+const orderController = require("../controllers/orderController");
+const authenticateToken = require("../middlewares/authentication");
+
+const router = express.Router();
+
+router.post("/", authenticateToken, orderController.createOrder);
+
+module.exports = router;
